[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
futures-channel = "0.3.15"
futures-util = "0.3.15"
url = "2.2"
tungstenite = "0.19"
tokio-tungstenite  = { version = "0.19", features = ["native-tls"] }

[profile.release]
strip = true